fixing high contrast issue

--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -11,6 +11,26 @@ $ms-checkbox-label-size: 20px;
 $ms-checkbox-transition-duration: 200ms;
 $ms-checkbox-transition-timing: cubic-bezier(.4, 0, .23, 1);
 
+@mixin highContrast-borderColor($active-color, $bw-color, $size: 2px) {
+  @media screen and (-ms-high-contrast: active) {
+    border: $size solid $active-color;
+  }
+
+  @media screen and (-ms-high-contrast: black-on-white) {
+    border: $size solid $bw-color;
+  }
+}
+
+@mixin highContrast-color($active-color, $bw-color) {
+  @media screen and (-ms-high-contrast: active) {
+    color: $active-color;
+  }
+
+  @media screen and (-ms-high-contrast: black-on-white) {
+    color: $bw-color;
+  }
+}
+
 .ms-Checkbox {
   box-sizing: border-box;
   color: $ms-color-neutralPrimary;
@@ -64,14 +84,6 @@ $ms-checkbox-transition-timing: cubic-bezier(.4, 0, .23, 1);
   line-height: $ms-checkbox-label-size;
   width: $ms-checkbox-label-size;
   text-align: center;
-
-  @media screen and (-ms-high-contrast: active) {
-    color: $ms-color-black;
-  }
-
-  @media screen and (-ms-high-contrast: black-on-white) {
-    color: $ms-color-white;
-  }
 }
 
 // The checkbox label
@@ -124,17 +136,20 @@ $ms-checkbox-transition-timing: cubic-bezier(.4, 0, .23, 1);
       border: 10px solid $ms-color-themePrimary;
       background-color: $ms-color-themePrimary;
 
-      @media screen and (-ms-high-contrast: active) {
-        border-color: $ms-color-contrastBlackSelected;
-      }
-
-      @media screen and (-ms-high-contrast: black-on-white) {
-        border-color: $ms-color-contrastWhiteSelected;
+      @media screen and (-ms-high-contrast: active), (-ms-high-contrast: black-on-white) {
+        display: none;
       }
     }
 
     &::after {
       display: block;
+
+      @media screen and (-ms-high-contrast: active), (-ms-high-contrast: black-on-white) {
+        height: 16px;
+        width: 16px;
+      }
+
+      @include highContrast-borderColor($ms-color-white, $ms-color-black);
     }
 
     &:hover,
@@ -161,26 +176,17 @@ $ms-checkbox-transition-timing: cubic-bezier(.4, 0, .23, 1);
       background-color: $ms-color-neutralTertiaryAlt;
       border-color: $ms-color-neutralTertiaryAlt;
       color: $ms-color-neutralTertiaryAlt;
+    }
 
-      @media screen and (-ms-high-contrast: active) {
-        border-color: $ms-color-contrastBlackDisabled;
-      }
-
-      @media screen and (-ms-high-contrast: black-on-white) {
-        border-color: $ms-color-contrastWhiteDisabled;
-      }
+    &::after {
+      @include highContrast-borderColor($ms-color-contrastBlackDisabled, $ms-color-contrastWhiteDisabled);
+      @include highContrast-color($ms-color-contrastBlackDisabled, $ms-color-contrastWhiteDisabled);
     }
 
     .ms-Label {
       color: $ms-color-neutralTertiary;
 
-      @media screen and (-ms-high-contrast: active) {
-        color: $ms-color-contrastBlackDisabled;
-      }
-
-      @media screen and (-ms-high-contrast: black-on-white) {
-        color: $ms-color-contrastWhiteDisabled;
-      }
+      @include highContrast-color($ms-color-contrastBlackDisabled, $ms-color-contrastWhiteDisabled);
     }
   }
 
